--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "mongoose": "^7.6.1",
+    "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
+    "seedgoose": "^2.0.15"
+  },
+  "devDependencies": {
+    "hbs": "^4.2.0",
     "seedgoose": "^2.0.2"
   }
 }
