--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
+    "request": "^2.88.2",
     "seedgoose": "^2.0.15"
   },
   "devDependencies": {
