--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express-jwt": "^6.1.2",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "~5.9.2",
     "morgan": "~1.9.1",
-    "request": "^2.88.2",
-    "seedgoose": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "hbs": "^4.2.0",
